--- a/templates/hello.html
+++ b/templates/hello.html
@@ -44,8 +44,8 @@
    
     <div data-options="region:'west',title:'West',split:true" style="width:150px;">
 		<ul>
-			<li><a href="#" rel="/group">group1</a></li>
-			<li><a href="#">group2</a></li>
+			<li><a href="#" rel="/group">group</a></li>
+			<li><a href="#" rel="/user">user</a></li>
 			<li><a href="#">group3</a></li>
 		</ul>
 	</div>
