--- a/templates/group.html
+++ b/templates/group.html
@@ -37,14 +37,25 @@
     });
     var url;
     function add_group(){
-       jQuery('#group_add').dialog('open').dialog('setTitle','Add Group');
+       jQuery('#group_add_edit').dialog('open').dialog('setTitle','Add Group');
        url=host+"/group/new";
     }
     function edit_group(){
-        jQuery('#group_edit').dialog('open').dialog('setTitle','Edit Group');
+    	var row=jQuery('#group_list').datagrid('getSelected');
+    	if(row){
+        	jQuery('#group_add_edit').dialog('open').dialog('setTitle','Edit Group');
+
+        	url=host+"/group/edit/"+row.group_id;
+    	}else{
+    		jQuery.messager.show({
+                title:'提示',
+                msg:'请选择一条记录'
+            });
+    	}
+
     }
     function save_group(){
-        jQuery('#group_add_form').form('submit',{
+        jQuery('#group_form').form('submit',{
             url:url,
             onSubmit:function(){
                 return jQuery(this).form('validate');
@@ -60,7 +71,7 @@
                 }else{
                     var getTimestamp=new Date().getTime();
                     url=host+"/group/view/?timestamp="+getTimestamp;
-                    jQuery('#group_add').dialog('close');
+                    jQuery('#group_add_edit').dialog('close');
                     jQuery('#group_list').datagrid('reload',{
                         url:url
                     });
@@ -107,28 +118,21 @@
 <body>
     <div id="group_list"></div>
     
-    <div id="group_add" class="easyui-dialog" style="width:500px;height:250px;padding:10px 20px" closed="true" buttons="#group_add_buttons" modal="true">
+    <div id="group_add_edit" class="easyui-dialog" style="width:500px;height:250px;padding:10px 20px" closed="true" buttons="#group_buttons" modal="true">
         <div class="ftitle">Add Group</div>
-        <form id="group_add_form" method="post">
+        <form id="group_form" method="post">
             <div class="fitem">
                 <label>Group Name:</label>
                 <input name="group_name" class="easyui-validatebox" required="true">
             </div>
         </form>
     </div>
-    <div id="group_add_buttons">
+    <div id="group_buttons">
         <a href="#" class="easyui-linkbutton" iconCls="icon-ok" onclick="save_group()">Save</a>
-        <a href="#" class="easyui-linkbutton" iconCls="icon-cancel" onclick="javascript:jQuery('#group_add').dialog('close')">Cancel</a>
+        <a href="#" class="easyui-linkbutton" iconCls="icon-cancel" onclick="javascript:jQuery('#group_add_edit').dialog('close')">Cancel</a>
     </div>
     
-    <div id="group_edit" class="easyui-dialog" style="width:550px;height:250px;padding:10px 20px" closed="true" buttons="group_edit_buttons" modal="true">
-        <form id="group_edit_form" method="post">
-            <div class="fitem">
-                <label>Group Name:</label>
-                <input name="group_name" class="easyui-validatebox" required="true">
-            </div>
-        </form>
-    </div>
+
 
 </body>
 </html>
