--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,61 +1,81 @@
+$def with(user_name,user_level)
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
-    <title>index</title>
-    <script type="text/javascript" src="/static/jquery.min.js"></script>
-    <script type="text/javascript" src="/static/jquery.easyui.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="/static/themes/default/easyui.css">
-    <link rel="stylesheet" type="text/css" href="/static/themes/icon.css">
-    <link rel="stylesheet" type="text/css" href="/static/demo/demo.css">
-    <link rel="stylesheet" type="text/css" href="/static/css/main.css">
-    <style>
-        body{margin:0;padding:0}
-    </style>
-	<script type="text/javascript">
-	jQuery(document).ready(function(){
-		jQuery("ul li a").click(function(){
-			var title=jQuery(this).text();
-			var host=window.location.host;
-			var url="http://"+host+jQuery(this).attr("rel");
-			var icon=jQuery(this).attr("icon");
-			openTab(title,url,icon);
+<title>index</title>
+<script type="text/javascript" src="/static/jquery.min.js"></script>
+<script type="text/javascript" src="/static/jquery.easyui.min.js"></script>
+<link rel="stylesheet" type="text/css"
+	href="/static/themes/default/easyui.css">
+<link rel="stylesheet" type="text/css" href="/static/themes/icon.css">
+<link rel="stylesheet" type="text/css" href="/static/demo/demo.css">
+<link rel="stylesheet" type="text/css" href="/static/css/main.css">
+<style>
+body {
+	margin: 0;
+	padding: 0
+}
+</style>
+<script type="text/javascript">
+	var host = "http://" + window.location.host;
+	jQuery(document).ready(function() {
+		jQuery("ul li a").click(function() {
+			var title = jQuery(this).text();
+			var host = window.location.host;
+			var url = "http://" + host + jQuery(this).attr("rel");
+			var icon = jQuery(this).attr("icon");
+			if (title != "exit") {
+				openTab(title, url, icon);
+			}
+		});
+		jQuery("#exit_link").click(function() {
+			location.href = host + '/user/logout';
 		});
 	});
-	function openTab(title,url,icon){
-		if(jQuery("#tabs").tabs('exists', title)){
+	function openTab(title, url, icon) {
+		if (jQuery("#tabs").tabs('exists', title)) {
 			jQuery("#tabs").tabs('select', title);
-		}else{
-			jQuery("#tabs").tabs('add',{
-				title: title,
-				content: createTabContent(url),
-				closable: true,
-				icon: icon
+		} else {
+			jQuery("#tabs").tabs('add', {
+				title : title,
+				content : createTabContent(url),
+				closable : true,
+				icon : icon
 			});
-		}    
+		}
 	}
-	function createTabContent(url){
-		return '<iframe style="width:100%;height:100%;" scrolling="auto" frameborder="0" src="' + url + '"></iframe>';
+	function createTabContent(url) {
+		return '<iframe style="width:100%;height:100%;" scrolling="auto" frameborder="0" src="'
+				+ url + '"></iframe>';
 	}
-	</script>
-    
+</script>
+
 </head>
 <body class="easyui-layout">
-  
-   
-    <div data-options="region:'west',title:'West',split:true" style="width:150px;">
+
+
+	<div
+		data-options="region:'west',title:'欢迎：$user_name',split:true"
+		style="width: 220px;">
 		<ul>
-			<li><a href="#" rel="/group">group</a></li>
-			<li><a href="#" rel="/user">user</a></li>
-			<li><a href="#">group3</a></li>
+			$if user_level=='1':
+				<li><a href="#" rel="/worklog">worklog</a></li>
+				<li><a href="#" id="exit_link">exit</a></li>
+			$if user_level=='2':
+				<li><a href="#" rel="/group">group</a></li>
+				<li><a href="#" rel="/user">user</a></li>
+				<li><a href="#" rel="/worklog">worklog</a></li>
+				<li><a href="#" id="exit_link">exit</a></li>
 		</ul>
 	</div>
-    <div id="content" data-options="region:'center',title:'center title'" style="padding:0px;background:#eee;">
+	<div id="content" data-options="region:'center',title:'center title'"
+		style="padding: 0px; background: #eee;">
 		<div id="tabs" class="easyui-tabs" fit="true" border="false">
-        <div title="欢迎使用">
-            <h1 style="font-size: 24px;">asdfasd</h1>
-            <h1 style="font-size: 24px;"></h1>
-        </div>
-    </div>
+			<div title="欢迎使用">
+				<h1 style="font-size: 24px;">asdfasd</h1>
+				<h1 style="font-size: 24px;"></h1>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
